--- a/templates/typerush/game.html
+++ b/templates/typerush/game.html
@@ -23,7 +23,7 @@ HippoType
 
 {% block main_block %}
 <main>
-    <div>time: <span id="timer">1:00</span></div>
+    <div>time: <span id="timer"></span></div>
     <h1>
         <!-- SVG content here as before, omitted for brevity -->
         Type Rush
