--- a/templates/typerush/register.html
+++ b/templates/typerush/register.html
@@ -18,7 +18,7 @@
 <div class="register-box">
     
     <h2>Register</h2>
-    <div id = "error"></div>
+
     <form id="form" action="">
         <div class="upload">
             <img src="{% static 'images/usercircle1.png' %}" width=100 heigt=100 alt="" style="color: #15F5BA;">
@@ -287,15 +287,19 @@
         </div>
         
         <div class="user-box">
-            <input type="password" required>
+            <input id="password" type="password" required>
             <label for="">Set Password</label>
+        </div>
+
+        <div class="error">
+            <label id="error" class="error"></label>
         </div>
         
         <a href="">
             <span></span>
             <span></span>
             <span></span>
-            <span></span>Submit
+            <span></span><button type='submit'>Submit</button>
         </a>
     </form>
 </div>
