fixing game header

--- a/templates/typerush/game.html
+++ b/templates/typerush/game.html
@@ -2,23 +2,12 @@
 {% load static %}
 
 {% block title_block %}
-HippoType
+TypeRush
 {% endblock %}
 
 {% block css %}
 <!-- <link href="{% static 'stylesheets/styles.css' %}" rel="stylesheet" type="text/css" /> -->
 <link href="{% static 'stylesheets/game.css' %}" rel="stylesheet" type="text/css" />
-{% endblock %}
-
-{% block header_block %}
-<div id="header">
-    <div id="info">
-
-    </div>
-    <div id="buttons">
-        <button id="newGameBtn">New game</button>
-    </div>
-</div>
 {% endblock %}
 
 {% block main_block %}
