--- a/static/stylesheets/register.css
+++ b/static/stylesheets/register.css
@@ -62,7 +62,8 @@ main {
     font-size: 12px;
 }
 
-.register-box form a {
+.register-box form input#submit {
+    background-color: var(--darker);
     position: relative;
     display: inline-block;
     padding: 10px 20px;
@@ -78,12 +79,13 @@ main {
     border-radius: 5px;
 }
 
-.register-box form a:hover {
+.register-box form input#submit:hover {
     background: var(--purple);
     border-color: var(--purple);
     color: var(--white);
     box-shadow: 0 0 5px var(--purple), 0 0 25px var(--purple), 0 0 50px var(--purple), 0 0 100px var(--purple);
 }
+
 
 @media (max-width: 768px) {
     .register-box {
