--- a/templates/typerush/home.html
+++ b/templates/typerush/home.html
@@ -23,7 +23,7 @@
         So sit back, (don't) relax, and enjoy :3 
     </div>
         
-    <a href="{% url 'typerush:game' %}" button type = "button" class="button get-started-button">GET STARTED</button>
+    <a href="{% url 'typerush:selecting_mode' %}" button type = "button" class="button get-started-button">GET STARTED</button>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="{% static 'script/JQuery.js' %}"></script>
