--- a/templates/typerush/game.html
+++ b/templates/typerush/game.html
@@ -27,6 +27,18 @@ TypeRush
         
     </div>
 </main>
+<div class="main-panel">
+    <div class="select-mode">
+        <button type="button" class="selectMode" data-mode="easy">
+            Easy
+        </button>
+        <button type="button" class="selectMode" data-mode="medium">
+            Medium
+        </button>
+        <button type="button" class="selectMode" data-mode="hard">
+            Hard
+        </button>
+    </div>
 {% endblock %}
 
 
