--- a/static/stylesheets/game.css
+++ b/static/stylesheets/game.css
@@ -209,3 +209,47 @@ div.word {
     animation: blink 0.3s infinite; 
 }
 
+.score {
+    display: none;
+}
+
+.score #score-box {
+    position: relative;
+    display: none;
+    max-width: 400px;
+    min-width: 300px;
+    width: 100%;
+    padding: 40px;
+    margin: auto;
+    margin-top: 80px;
+    margin-bottom: 80px;
+    background: rgba(16, 16, 16, 0.725);
+    border-radius: 10px;
+    color: var(--lightest);
+    box-shadow: 0 15px 25px var(--mint);
+}
+
+.score #score-box label {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+    padding: 10px 0;
+    font-size: 23px;
+    font-style: italic;
+    color: var(--medium);
+    pointer-events: none;
+    transition: 0.5s;
+}
+
+.score #wpm-box,
+.score #accu-box {
+    position: relative;
+    padding-top: 20px; 
+}
+
+.score #wpm,
+.score #accuracy {
+    font-size: 16px;
+    color: var(--medium);
+}
