--- a/templates/typerush/leaderboard.html
+++ b/templates/typerush/leaderboard.html
@@ -34,6 +34,7 @@
                 <div class="profile-title">
                     <h2 id="username">{{ user_instance.user.username }}</h2>
                     <h3 id="real-name">{{ user_instance.firstname }} {{ user_instance.surname }}</h3>
+                    <h3 id="country">{{ user_instance.country }}</h3>
                 </div>
             </div>
         </div>
