added logout & edit profile

--- a/static/stylesheets/base.css
+++ b/static/stylesheets/base.css
@@ -70,7 +70,10 @@ html {
     --color: var(--lightest);
     --surface: var(--darker);
 }
-
+a {
+    text-decoration: none;
+    color: inherit;
+}
 /* Container for entire window - flexbox*/
 
 .container {
