default mode to easy

--- a/templates/typerush/game.html
+++ b/templates/typerush/game.html
@@ -29,7 +29,7 @@ TypeRush
 </main>
 <div class="main-panel">
     <div class="select-mode">
-        <button type="button" class="selectMode" data-mode="easy">
+        <button type="button" class="selectMode selected" data-mode="easy">
             Easy
         </button>
         <button type="button" class="selectMode" data-mode="medium">
