redirect users to log in if not logged in / invalid log in dealt with

--- a/templates/typerush/login.html
+++ b/templates/typerush/login.html
@@ -11,7 +11,6 @@
 
 {% block main_block %}
 <div class="login-box">
-    
     <h2>Login</h2>
     <form action="{% url 'typerush:user_login' %}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
@@ -23,7 +22,11 @@
             <input type="password" name="password" onfocus="this.value=''" required>
             <label for="">Password</label>
         </div>
+        {% if error_message %}
+            <p style="color: red;">{{ error_message }}</p>
+        {% endif %}
         <button type="submit" class="login-button">Submit</button>
     </form>
+    
 </div>
 {% endblock %}
