--- a/static/stylesheets/game.css
+++ b/static/stylesheets/game.css
@@ -22,7 +22,7 @@ main {
 .select-mode .selectMode {
     color: white; 
     border: 1px solid var(--mint);
-    background-color: var(--darkest);
+    background-color: var(--bg);
     padding: 10px 20px;
     border-radius: 20px;
     cursor: pointer;
@@ -52,7 +52,7 @@ main {
 }
 
 h1 {
-    color: var(--mint);
+    color: var(--white);
 }
 
 h1 svg {
@@ -75,12 +75,13 @@ h1 svg {
 }
 
 button {
-    background: rgba(255, 255, 255, .2);
+    background: var(--bg);
     border: 1px solid var(--mint);
     color: var(--white);
     padding: 5px 20px;
     border-radius: 5px;
     cursor: pointer;
+    font-size: 20px;
     transition: all 0.5s;
 }
 
@@ -104,51 +105,7 @@ div#game:focus {
 }
 
 #words {
-    /* filter: blur(5px); */
     color: var(--white);
-}
-
-#game:focus #words {
-    /* filter: blur(0); */
-}
-
-#focus-error {
-    position: absolute;
-    inset: 0;
-    text-align: center;
-    padding-top: 35px;
-    color: var(--mandarin);
-}
-
-#game:focus #focus-error {
-    display: none;
-} 
-
-div.word {
-    display: inline-block;
-    font-family: 'Roboto Mono', monospace;
-    margin: 0 5px;
-}
-
-.letter.correct {
-    color: var(--mint);
-}
-
-.letter.incorrect {
-    color: var(--mandarin);
-}
-
-#game.over #words {
-    opacity: .5;
-    /* filter: blur(0px); */
-}
-
-#game.over:focus #cursor {
-    display: none;
-}
-
-#game.over #focus-error {
-    display: none;
 }
 
 #textbox-container {
@@ -250,6 +207,8 @@ div.word {
 
 .score #wpm,
 .score #accuracy {
-    font-size: 16px;
+    font-size: 30px;
     color: var(--medium);
+    text-align: center;
+    display: block;
 }
