--- a/templates/typerush/profile.html
+++ b/templates/typerush/profile.html
@@ -18,7 +18,7 @@
                         <img src="{{ MEDIA_URL }}{{ player.profile_picture }}" alt="profile-img"/>
                     {% else %}
                         <!-- Show default profile picture -->
-                        <img src="{% static 'images/usercircle2.png' %}" alt="default-profile-img"/>
+                        <img src="{% static 'images/usercircle.png' %}" alt="default-profile-img"/>
                     {% endif %}
 
                 </div>
