--- a/templates/typerush/base.html
+++ b/templates/typerush/base.html
@@ -8,7 +8,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width", initial-scale=1.0>
-    <link rel="icon" type="image/x-icon" href="{% static 'images/icon.png' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'images/headicon.png' %}">
     <title>Type Rush - 
         {% block title_block %}
             Base 
