--- a/templates/typerush/register.html
+++ b/templates/typerush/register.html
@@ -41,8 +41,9 @@
             <label for="">Surname</label>
         </div>
 
-        <div id="dropbox">
-            <label for="">Country</label>
+        <div id="dropbox" class="country">
+            <label for="" style="color: white; font-size: 16px;">Country</label>
+        </br>
             <select name="country" class="form-control" id="country">
                 <option value="0" label="Select a country ... " selected="selected">Select a country ... </option>
                 <option value="United States">United States</option>
