--- a/templates/typerush/register.html
+++ b/templates/typerush/register.html
@@ -8,12 +8,24 @@
 {{ block.super }}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 <link href="{% static 'stylesheets/register.css' %}" rel="stylesheet" type="text/css" />
+<style>
+    .hyperlink {
+        display: block; 
+        margin-top: 10px;
+    }
+
+    .hyperlink:hover {
+        color: #836FFF; 
+    }
+</style>
 {% endblock %}
 
 {% block main_block %}
+<div>
 {% if registered %}
-    <h2 id="registered-msg"> Thank you for registering!</h2>
-    <a href="{% url 'typerush:home' %}" id="link-to-home">Return to homepage</a>
+    <h2 id="registered-msg"> Thank you for registering !</h2>
+    <h3> </h3>
+    <a href="{% url 'typerush:home' %}" id="link-to-home" style="text-align: center;" class="hyperlink">Return to homepage</a>
 {% else %}
 <div class="register-box">
     
@@ -306,6 +318,7 @@
     </form>
 </div>
 {% endif %}
+</div>
 {% endblock %}
 
 {% block script %}
